# hapichat

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
resources/: strings.py
