[tool.poetry]
name = "hapichat"
version = "0.1.0"
description = "Chatbot for HAPI"
authors = []
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic-ai = ">=0.4.5,<0.5.0"
streamlit = ">=1.47.0,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
opaiui = ">=0.9.0,<1.0.0"
fhiry = "^5.0.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"